--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@
 		background-color: brown;
 		color: white;
 }
+#cim {
+	background-color: gray;
+	color: white;
+}
+#focim {
+	background-color: gray;
+	color: white;
+}
